--- a/templates/gui/menuGauche.html.twig
+++ b/templates/gui/menuGauche.html.twig
@@ -1,10 +1,4 @@
-<nav class="navbar navbar-light navbar-vertical navbar-expand-xl navbar-card">
-    <script>
-        var navbarStyle = localStorage.getItem("navbarStyle");
-        if (navbarStyle && navbarStyle !== 'transparent') {
-            document.querySelector('.navbar-vertical').classList.add(`navbar-${navbarStyle}`);
-        }
-    </script>
+<nav class="navbar navbar-light navbar-vertical navbar-expand-xl">
     <div class="d-flex align-items-center">
         <div class="toggle-icon-wrapper">
             <button class="btn navbar-toggler-humburger-icon navbar-vertical-toggle" data-bs-toggle="tooltip" data-bs-placement="left" title="Ouvrir/Fermer">
